--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Coder2195's Website</title>
   </head>
   <body>
-    
+    <script src="../scripts/main.js"></script>
   </body>
+  
 </html>
