🏭😹 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <script src="../scripts/howler.js"></script>
   <script src="../scripts/jquery.js"></script> 
+  <link rel="stylesheet" href="../css/main.css">
   <body id="body">
   <div id="audcontrol">
     1
