💐🍮 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
     1
   </div>
   <div id="home">
-    2
+    <marquee>
+      <h1 id="title">
+      
+      </h1>
+    </marquee>
+    
   </div>
   <div id="snap">
     3
