✨🍛 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   </div>
   <div id="home">
     <marquee>
-      <h1 id="title">
-      
+      <h1 id="hometitle">
+      eee
       </h1>
     </marquee>
     
