--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="Welcome to my website!" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Coder2195's Website</title>
+    <link rel="icon" href="img/logo.ico">
   </head>
   <script src="../scripts/howler.js"></script>
   <script src="../scripts/jquery.js"></script> 
@@ -16,7 +17,7 @@
   <div id="home">
     <marquee>
       <h1 id="hometitle">
-      eee
+        
       </h1>
     </marquee>
     
